# lab1-fullstack

./: .gitignore  .railwayignore  .vercelignore  DEPLOYMENT.md  DEPLOYMENT_ALTERNATIVE.md  QUICK_START.md  README.md  SUPABASE_CONNECTION_GUIDE.md  SUPABASE_SETUP_COMPLETE.md  create-github-repo.ps1  create-repo.ps1  github-commands.txt  netlify.toml  package.json  pnpm-lock.yaml  setup-github.ps1  vercel.json
apps/backend/: .dockerignore  .railwayignore  Dockerfile  alembic.ini  nixpacks.toml  package.json  postman_collection.json  prepare-deployment.ps1  prepare-deployment.sh  pyproject.toml  railway.json  render.yaml  requirements.txt
apps/backend/alembic/: env.py
apps/backend/alembic/versions/: 20250925_000001_create_owners_cars.py  20251008_000002_create_users.py
apps/backend/app/: __init__.py  db.py  deps.py  main.py  security.py
apps/backend/app/api/: auth.py  cars.py  owners.py
apps/backend/app/crud/: car.py  owner.py
apps/backend/app/models/: __init__.py  car.py  owner.py  user.py
apps/backend/app/schemas/: auth.py  car.py  owner.py
apps/backend/tests/: conftest.py  test_auth_and_endpoints.py  test_owner_repository.py  test_smoke.py
apps/frontend/: .dockerignore  Dockerfile  jest.config.cjs  jest.setup.ts  netlify.toml  next.config.js  package-lock.json  package.json  tailwind.config.ts
apps/frontend/app/: globals.css  layout.tsx  page.tsx
apps/frontend/app/lab10/: page.tsx
apps/frontend/app/lab11/: _types.ts  page.tsx
apps/frontend/tests/: CarList.test.tsx  Lab11Page.test.tsx  multi.test.ts  multi.ts
infra/: docker-compose.yml
(+26 files in other folders)
